add: posts API swagger
